--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
+# Environment files
+.env
+.env.development
+.env.production
+.env.local
+.env.*.local
+
+# Dependencies
 node_modules/
+package-lock.json
+
+# Config files
 config/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
