--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
     "axios": "^1.6.5",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^8.0.4",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.1.7"
   },
-  "scripts":{
-    "dev": "nodemon index",
-    "start": "node index.js"
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon index",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "fetch-verses": "cross-env NODE_ENV=development node scripts/fetchAllVerses.js"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
