--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon index",
-    "start": "cross-env NODE_ENV=production node index.js",
+    "start": "node index.js",
+    "build": "echo 'Build completed'",
     "fetch-verses": "cross-env NODE_ENV=development node scripts/fetchAllVerses.js"
   },
   "devDependencies": {
